# MTG-Deck-Creator

./: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  mtgProjectPlan.md  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
scripts/: eval_node.py  ingest_300.py  ingest_full.py
src/mtg/: config.py  llm.py  schemas.py
src/mtg/graph/: build.py  state.py  templates.py
src/mtg/graph/nodes/: hard_validate.py  parse_query.py  picker.py  plan_deck.py  repair.py  soft_validate.py  worker.py
src/mtg/ingest/: embed.py  fetch_scryfall.py  reasoning.py
src/mtg/prompts/: parse_query.txt  picker.txt  reasoning.txt  soft_validator.txt  worker.txt
src/mtg/rag/: db.py  search.py
src/mtg/server/: __init__.py  api.py
src/mtg/server/static/: index.html
tests/nodes/: test_parse_query.py  test_picker.py  test_worker.py
